@@ -3,10 +3,17 @@
 ** [[https://github.com/USTC-TNS/TAT/compare/v0.3.1...dev][Unreleased]]
 
 *** Added
++ *tetragono*: Add =natural_gradient_by_direct_pseudo_inverse= to calculate natural gradient for sampling lattice. And
+  add parameter =use_natural_gradient_by_direct_pseudo_inverse= (default is False), =natural_gradient_r_pinv= and
+  =natural_gradient_a_pinv= for high/mid-level API in =gm_run= to use direct pseudo inverse to calculate natural
+  gradient.
 *** Changed
 + *TAT.py*: =sqrt= will calculate the square root of absoluate value in tensor elementwisely, instead of square root of
   value itself and return =nan= for negative number.
 *** Deprecated
++ *tetragono*: =natural_gradient= for observer object is deprecated, users should specify the method to calculate
+  natural gradient explicitly, which are =natural_gradient_by_direct_pseudo_inverse= and
+  =natural_gradient_by_conjugate_gradient=.
 *** Removed
 *** Fixed
 
